fix: remove alternating row colors for tables (breaks in subtables)

--- a/assets/scss/_debugprint.scss
+++ b/assets/scss/_debugprint.scss
@@ -2,7 +2,6 @@
 table.debugprint {
   @extend .table;
   @extend .table-light;
-  @extend .table-striped;
   @extend .table-bordered;
   @extend .table-sm;
   @extend .table-hover;
